Added changes to pisoton page

--- a/pisoton.html
+++ b/pisoton.html
@@ -3,8 +3,7 @@
 <head>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137172068-1"></script>
     <script>
-    console.log("some");
-    window.dataLayer = window.dataLayer || [];
+      window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
@@ -17,7 +16,10 @@
     <meta name="viewport" content="width=device-width, user-scalable=no" >
     <link rel="stylesheet" href="css/mobileSelect.css">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap-4-utilities.min.css">
     <link rel="stylesheet" href="css/default.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/pisoton.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900" rel="stylesheet">
 </head>
 <body id="pisoton">
@@ -69,160 +71,39 @@
     <div id="overlay_back"></div>
   </section>
   <div class="weAre">
-    <div class="generalWrapper">
-      <div class="weAreWrapper">
-        <article>
-          <img src="img/pisoton/PisotonHome-06.png" alt="Lo que somos"/>
-          <p>Somos un equipo humano comprometido con la construcción del ser, que trabaja por la infancia y la adolescencia, facilitando el conocimiento del desarrollo psicoafectivo, la aceptación y la regulación de las emociones en niños, padres y maestros, para contribuir a la armonía, el bienestar y la transformación social.</p>
-        </article>
-        <div class="otherSubPages">
-          <a href="nos_emociona_educar.html"><img src="img/pisoton/emotion.png" alt="Nos emociona educar"/></a>
-          <a href="razones_y_corazones.html"><img src="img/pisoton/reason.png" alt="Razones y corazones"/></a>
-        </div>
+    <div class="d-flex justify-content-center align-items-center flex-wrap py-5 px-3 my-1 mt-md-5">
+      <h2 class="mr-3 mr-md-5 my-3"> Lo que somos</h2>
+      <p>Somos un equipo humano comprometido con la construcción del ser, que trabaja por la infancia y la adolescencia, facilitando el conocimiento del desarrollo psicoafectivo, la aceptación y la regulación de las emociones en niños, padres y maestros, para contribuir a la armonía, el bienestar y la transformación social.</p>
+    </div>
+    <div class="who-we-are d-flex justify-content-center flex-wrap flex-md-nowrap">
+        <a class="pr-5 mb-3" href="nos_emociona_educar.html"><img src="img/pisoton/elementos-08.png" alt="Nos emociona educar"></a>
+        <a class="pl-5 mb-3" href="razones_y_corazones.html"><img src="img/pisoton/elementos-09.png" alt="Razones y corazones"></a>
+    </div>
+  </div>
+  <div class="articles d-flex justify-content-center flex-wrap flex-md-nowrap align-items-center pt-5 px-5 px-3 pb-3 m-0 text-center text-md-left">
+      <div class="articles-explanation mr-0 mr-md-5 pr-0 pr-md-5">
+        <p class="articleTitle mb-4">Artículos expertos temas de crianza</p>
+        <p class="articleText mb-4">Si quieres informarte y aprender más sobre la crianza de tus hijos e hijas, haz click aquí.</p>
+      </div>
+      <div class="articles-links d-flex flex-column py-2 py-md-5">
+          <a class="mb-3" href="articles.php"><img src="img/pisoton/elementos-10.png" alt="Nos emociona educar"></a>
+          <a class="mb-3" href="/articles.php"><img src="img/pisoton/elementos-11.png" alt="Razones y corazones"></a>
+      </div>
+  </div>
+  <div class="transcendental-stories">
+    <h2>Gestadores de historias trascendentes</h2>
+    <div class="stories">
+      <div class="feature-story pr-5">
+      </div>
+      <div class="old-stories d-flex flex-column">
+
       </div>
     </div>
   </div>
-  <section id="infodata">
-    <!--<div class="infodataHeader">
-      <div class="arrowRight"><img src="img/pisoton/cronology/ICON_DER.png"/></div>
-      <div class="tab_header active responsive" id="tabSelect">Niños y Niñas</div>
-      <div class="tab_header active" id="tab1">Niños y Niñas</div>
-      <div class="tab_header" id="tab2">Padres, Maestros y Cuidadores</div>
-    </div>-->
-    <div class="generalWrapper">
-      <!--<div class="tab_content active" id="content_tab1">
-        <div class="big_card">
-          <div class="big_card_title">
-            Porque aprender sobre desarrollo piscoafectivo
-            <img src="img/pisoton/muestra.png">
-          </div>
-          <article>
-            <div class="cell">
-              Ser feliz con lo que tienen, reconocer oportunidades y trabajar duro para alcanzarlos.
-            </div>
-            <div class="cell">
-              Ser feliz con lo que tienen, reconocer oportunidades y trabajar duro para alcanzarlos.
-            </div>
-            <div class="cell">
-              Expresen lo que piensen y sienten de manera adecuada.
-            </div>
-            <div class="cell">
-              Expresen lo que piensen y sienten de manera adecuada.
-            </div>
-            <div class="cell">
-              Ser feliz con lo que tienen, reconocer oportunidades y trabajar duro para alcanzarlos.
-            </div>
-            <div class="cell">
-              Ser feliz con lo que tienen, reconocer oportunidades y trabajar duro para alcanzarlos.
-            </div>
-            <div class="cell">
-              Expresen lo que piensen y sienten de manera adecuada.
-            </div>
-            <div class="cell">
-              Expresen lo que piensen y sienten de manera adecuada.
-            </div>
-          </article>
-        </div>
-      </div>
-      <div class="tab_content" id="content_tab2">
-        <div class="big_card">
-          <div class="big_card_title">
-            Porque aprender sobre desarrollo piscoafectivo padres
-            <img src="img/pisoton/muestra.png">
-          </div>
-          <article>
-            <div class="cell">
-              Ser feliz con lo que tienen, reconocer oportunidades y trabajar duro para alcanzarlos.
-            </div>
-            <div class="cell">
-              Ser feliz con lo que tienen, reconocer oportunidades y trabajar duro para alcanzarlos.
-            </div>
-            <div class="cell">
-              Expresen lo que piensen y sienten de manera adecuada.
-            </div>
-            <div class="cell">
-              Expresen lo que piensen y sienten de manera adecuada.
-            </div>
-            <div class="cell">
-              Ser feliz con lo que tienen, reconocer oportunidades y trabajar duro para alcanzarlos.
-            </div>
-            <div class="cell">
-              Ser feliz con lo que tienen, reconocer oportunidades y trabajar duro para alcanzarlos.
-            </div>
-            <div class="cell">
-              Expresen lo que piensen y sienten de manera adecuada.
-            </div>
-            <div class="cell">
-              Expresen lo que piensen y sienten de manera adecuada.
-            </div>
-          </article>
-        </div>
-      </div>-->
-      <div id="articles">
-        <article>
-          <p class="articleTitle">Artículos expertos temas de crianza</p>
-          <p class="articleText">  Si quieres informarte y aprender más sobre la crianza de tus hijos e hijas, haz click aquí.</p>
-        </article>
-        <div class="opt_content_slider_wrapper">
-          <div class="opt_content active">
-            <article class="card">
-              <p class="cardTitle">Artículo</p>
-              <p class="cardSubtitle">Psicoafectividad</p>
-              <p class="cardDescTitle"> Investigación y resultados.</p>
-              <p class="cardDesc">Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada. Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada.</p>
-              <a href="#">Ver más</a>
-            </article>
-            <article class="card">
-              <p class="cardTitle">Artículo</p>
-              <p class="cardSubtitle">Psicoafectividad</p>
-              <p class="cardDescTitle"> Investigación y resultados.</p>
-              <p class="cardDesc">Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada. Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada.</p>
-              <a href="#">Ver más</a>
-            </article>
-            <article class="card">
-              <p class="cardTitle">Artículo</p>
-              <p class="cardSubtitle">Psicoafectividad</p>
-              <p class="cardDescTitle"> Investigación y resultados.</p>
-              <p class="cardDesc">Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada. Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada.</p>
-              <a href="#">Ver más</a>
-            </article>
-            <article class="card">
-              <p class="cardTitle">Artículo</p>
-              <p class="cardSubtitle">Psicoafectividad</p>
-              <p class="cardDescTitle"> Investigación y resultados.</p>
-              <p class="cardDesc">Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada. Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada.</p>
-              <a href="#">Ver más</a>
-            </article>
-            <article class="card">
-              <p class="cardTitle">Artículo</p>
-              <p class="cardSubtitle">Psicoafectividad</p>
-              <p class="cardDescTitle"> Investigación y resultados.</p>
-              <p class="cardDesc">Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada. Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada.</p>
-              <a href="#">Ver más</a>
-            </article>
-            <article class="card">
-              <p class="cardTitle">Artículo</p>
-              <p class="cardSubtitle">Psicoafectividad</p>
-              <p class="cardDescTitle"> Investigación y resultados.</p>
-              <p class="cardDesc">Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada. Ser feliz con lo que tienen, reconocer oportunidades y trabjar duro para alcanzarlos. Exprese lo que piensan y sienten de manera adecuada.</p>
-              <a href="#">Ver más</a>
-            </article>
-          </div>
-        </div>
-        <div id="wrapperSelectorArticle">
-          <span class="active" id="opt1">1</span>
-          <span id="opt2">2</span>
-          <span id="opt3">3</span>
-        </div>
-      </div>
-    </div>
-  </section>
   <section id="teamAndFriends">
     <div class="generalWrapper">
       <div id="teamWrapper">
         <p>Gestadores de historias trascendentes</p>
-        <div class="arrowLeft"><img src="img/pisoton/friends/ICONO_IZQ.png"/></div>
-        <div class="arrowRight"><img src="img/pisoton/friends/ICONO_DER.png"/></div>
         <div id="team" class="pisoton_slider">
           <div class="sliderContent">
             <div class="card">
@@ -596,6 +477,7 @@
   <script src="js/libs/bootstrap/bootstrap.min.js"></script>
   <script src="js/mobileSelect.js"></script>
   <script src="js/handler.js"></script>
+  <script src="js/pisotonPage.js"></script>
     <!--<script src="js/libs/jqueryValidate/jqueryvalidate.js"></script>-->
     <!--<script src="js/formhandler.js"></script>-->
 </body>
