Finished pisoton page

--- a/pisoton.html
+++ b/pisoton.html
@@ -24,8 +24,6 @@
 </head>
 <body id="pisoton">
   <section id="banner" class="pisoton_banner">
-    <!--<div id="back_cloud"></div>
-    <div id="back_ana"></div>-->
     <div class="topnav parent" id="myTopnav">
       <a href="#" class="active">Pisotón</a>
       <a href="padres.php">Padres</a>
@@ -43,24 +41,6 @@
     </header>
     <iframe  type="text/html" allowfullscreen style="width:100%;height:100%;display:none" src="" frameborder="0"></iframe>
     <div class="bannerImg"></div>
-    <!--<div class="subMenu">
-      <a id="refBanner" href="#" class="active">Inicio</a>
-      <a id="refInfodata" href="#infodata" >Artículos</a>
-      <a id="refTeamAndFriends" href="#teamAndFriends" >Equipo</a>
-      <a id="refCronology" href="#cronology" >Cronología</a>
-      <a id="refContacts" href="#moreInfo">Contacto</a>
-    </div>-->
-    <!--<h1 id="logo">
-      <a href="#"></a>
-    </h1>
-    /*<div class="topnav" id="myTopnav">
-      <a href="#padres">Padres</a>
-      <a href="#maestros">Maestros</a>
-      <a href="#" class="active">Niños</a>
-      <a href="#blog">Video Blog</a>
-      <a href="#Contacto">Contacto</a>
-      <a href="javascript:void(0);" class="icon" onclick="menuClick()">&#9776;</a>
-    </div>-->
     <div class="generalWrapper">
       <article>
         <h2></h2>
@@ -70,7 +50,7 @@
     </div>
     <div id="overlay_back"></div>
   </section>
-  <div class="weAre">
+  <section class="weAre">
     <div class="d-flex justify-content-center align-items-center flex-wrap py-5 px-3 my-1 mt-md-5">
       <h2 class="mr-3 mr-md-5 my-3"> Lo que somos</h2>
       <p>Somos un equipo humano comprometido con la construcción del ser, que trabaja por la infancia y la adolescencia, facilitando el conocimiento del desarrollo psicoafectivo, la aceptación y la regulación de las emociones en niños, padres y maestros, para contribuir a la armonía, el bienestar y la transformación social.</p>
@@ -79,8 +59,8 @@
         <a class="pr-5 mb-3" href="nos_emociona_educar.html"><img src="img/pisoton/elementos-08.png" alt="Nos emociona educar"></a>
         <a class="pl-5 mb-3" href="razones_y_corazones.html"><img src="img/pisoton/elementos-09.png" alt="Razones y corazones"></a>
     </div>
-  </div>
-  <div class="articles d-flex justify-content-center flex-wrap flex-md-nowrap align-items-center pt-5 px-5 px-3 pb-3 m-0 text-center text-md-left">
+  </section>
+  <section class="articles d-flex justify-content-center flex-wrap flex-md-nowrap align-items-center pt-5 px-5 px-3 pb-3 m-0 text-center text-md-left">
       <div class="articles-explanation mr-0 mr-md-5 pr-0 pr-md-5">
         <p class="articleTitle mb-4">Artículos expertos temas de crianza</p>
         <p class="articleText mb-4">Si quieres informarte y aprender más sobre la crianza de tus hijos e hijas, haz click aquí.</p>
@@ -89,36 +69,19 @@
           <a class="mb-3" href="articles.php"><img src="img/pisoton/elementos-10.png" alt="Nos emociona educar"></a>
           <a class="mb-3" href="/articles.php"><img src="img/pisoton/elementos-11.png" alt="Razones y corazones"></a>
       </div>
-  </div>
-  <div class="transcendental-stories">
+  </section>
+
+  <!-- Changed by pisotonPagejs -->
+  <section class="transcendental-stories py-4 py-md-0 pt-md-1 pb-md-5">
     <h2>Gestadores de historias trascendentes</h2>
     <div class="stories">
-      <div class="feature-story pr-5">
+      <div class="feature-story pr-lg-3">
       </div>
       <div class="old-stories d-flex flex-column">
-
-      </div>
-    </div>
-  </div>
-  <section id="teamAndFriends">
-    <div class="generalWrapper">
-      <div id="teamWrapper">
-        <p>Gestadores de historias trascendentes</p>
-        <div id="team" class="pisoton_slider">
-          <div class="sliderContent">
-            <div class="card">
-              <div class="background_overlay"></div>
-              <article>
-                <p class="cardSubtitle">Dir Comunicaciones</p>
-                <p class="cardDescTitle"> Adelaida Guerrero</p>
-                <p class="cardDesc">xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxxx</p>
-              </article>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </section>
+
   <section id="cronology">
     <div id="cronologyWrapper">
       <div class="arrowLeft"><img src="img/pisoton/cronology/ICON_IZQ.png"/></div>
@@ -130,21 +93,18 @@
               <p class="title">1990</p>
               <p></p>
             </article>
-            <!--<img src="img/pisoton/cronology/PISOTON_1.png"/>-->
           </div>
           <div class="cronologyItem">
             <article>
               <p class="title">1997</p>
               <p>Como resultado de una tesis doctoral, nace Pisotón de Desarrollo Psicoafectivo y Educación Emocional Pisotón, la cual sustenta la contextualización científica y académica de este. Se realizan las primeras aplicaciones en Cartagena y Sincelejo. Diseño del Diplomado en Desarrollo Psicoafectivo y Educación Emocional, para la ejecución de Pisotón en las instituciones educativas.</p>
             </article>
-            <!--<img src="img/pisoton/cronology/PISOTON_2.png"/>-->
           </div>
           <div class="cronologyItem">
             <article>
               <p class="title">1998</p>
               <p>Pisotón llega a Santa Marta con nuevos tópicos de intervención: el psicoafectivo yahora también Pisotón de Valores.</p>
             </article>
-            <!--<img src="img/pisoton/cronology/PISOTON_3.png"/>-->
           </div>
           <div class="cronologyItem">
             <article>
@@ -155,21 +115,18 @@
                 - Que tendría mucha aplicabilidad en la escuela y en programas no formales, hogares comunitarios y ludotecas.<br>
                 Se iniciaron aplicaciones piloto en diferentes regiones del país. El primer grupo atendido fue el de las víctimas del terremoto de Armenia. Se capacitaron 400 docentes del Eje Cafetero y 105 maestros de los siete departamentos de la Costa Caribe: Atlántico, Bolívar, Cesar, Córdoba, La Guajira, Magdalena y Sucre, contando con el apoyo de empresas privadas, como Citibank y Vivero, entre otras.</p>
             </article>
-            <!--<img src="img/pisoton/cronology/PISOTON_3.png"/>-->
           </div>
           <div class="cronologyItem">
             <article>
               <p class="title">2000</p>
               <p>Se aplica Pisotón a 105 niños y niñas desplazados de los barrios Nelson Mandela y Pozón de Cartagena, con el apoyo del ministro de Educación, Francisco Lloreda Mera. Esta aplicación permitió dar cuenta de que las herramientas de Pisotón logran el alivio del niño que vive experiencias que generan profundas interferencias en su desarrollo psicoafectivo, más allá de las evolutivamente esperadas. Se inicia la serie de televisión del Ministerio de Educación Nacional Creciendo en familia.</p>
             </article>
-            <!--<img src="img/pisoton/cronology/PISOTON_3.png"/>-->
           </div>
           <div class="cronologyItem">
             <article>
               <p class="title">2001-2002</p>
               <p>Se firma una alianza con el Convenio Andrés Bello, el Gobierno nacional, el Instituto colombiano de Bienestar Familiar y la Universidad del Norte para formar junto con Pisotón Haz Paz de la Presidencia de la República y las alcaldías de Cartagena, Buenaventura y los departamentos de Sucre, Cundinamarca, Antioquia y Vaupés a 500 docentes, 160 madres comunitarias y 80 ludotecarias en desarrollo psicoafectivo y así impactar la vida de casi 4000 familias. Durante este tiempo se logró una intervención en población infantil inmersa en el conflicto armado, donde los niños habían incorporado a su cotidianidad el ambiente externo nocivo, dejando de lado sus comportamientos y juegos infantiles. Con Pisotón, recuperaron su lugar en la infancia.</p>
             </article>
-            <!--<img src="img/pisoton/cronology/PISOTON_4.png"/>-->
           </div>
           <div class="cronologyItem">
             <article>
