--- a/pisoton.html
+++ b/pisoton.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/pisoton.css">
+    <link rel="stylesheet" href="css/buttons.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900" rel="stylesheet">
 </head>
 <body id="pisoton">
@@ -40,7 +41,6 @@
       </div>
     </header>
     <iframe  type="text/html" allowfullscreen style="width:100%;height:100%;display:none" src="" frameborder="0"></iframe>
-    <div class="bannerImg"></div>
     <div class="generalWrapper">
       <article>
         <h2></h2>
