Added changes to distribution in pisoton page

--- a/pisoton.html
+++ b/pisoton.html
@@ -60,13 +60,13 @@
         <a class="pl-5 mb-3" href="razones_y_corazones.html"><img src="img/pisoton/elementos-09.png" alt="Razones y corazones"></a>
     </div>
   </section>
-  <section class="articles d-flex justify-content-center flex-wrap flex-md-nowrap align-items-center pt-5 px-5 px-3 pb-3 m-0 text-center text-md-left">
-      <div class="articles-explanation mr-0 mr-md-5 pr-0 pr-md-5">
+  <section class="articles d-flex justify-content-center flex-wrap flex-md-nowrap align-items-center pt-5 px-3 px-lg-5 pb-3 m-0 text-center text-md-left">
+      <div class="articles-explanation mr-2">
         <p class="articleTitle mb-4">Artículos expertos temas de crianza</p>
         <p class="articleText mb-4">Si quieres informarte y aprender más sobre la crianza de tus hijos e hijas, haz click aquí.</p>
       </div>
-      <div class="articles-links d-flex flex-column py-2 py-md-5">
-          <a class="mb-3" href="articles.php"><img src="img/pisoton/elementos-10.png" alt="Nos emociona educar"></a>
+      <div class="articles-links d-flex py-2 py-md-5">
+          <a class="mb-3 mr-2 mr-lg-5" href="articles.php"><img src="img/pisoton/elementos-10.png" alt="Nos emociona educar"></a>
           <a class="mb-3" href="/articles.php"><img src="img/pisoton/elementos-11.png" alt="Razones y corazones"></a>
       </div>
   </section>
