--- a/nos_emociona_transformar.html
+++ b/nos_emociona_transformar.html
@@ -16,7 +16,10 @@
     <title></title>
     <meta name="viewport" content="width=device-width, user-scalable=no" >
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap-4-utilities.min.css">
     <link rel="stylesheet" href="css/default.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/excited_to_transform.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900" rel="stylesheet">
 </head>
 <body>
@@ -29,22 +32,6 @@
       <a href="index.php" >Niños</a>
       <a href="javascript:void(0);" class="icon" onclick="menuClickParent()">&#9776;</a>
     </div>
-    <!--<div class="subMenu">
-      <a id="refBanner" href="#" class="active">Inicio</a>
-      <a id="refBlog" href="#blog">Video Blog</a>
-      <a id="refContacts" href="#moreInfo">Contacto</a>
-    </div>-->
-    <!--<h1 id="logo">
-      <a href="#"></a>
-    </h1>
-    <div class="topnav" id="myTopnav">
-      <a href="#padres">Padres</a>
-      <a href="#maestros">Maestros</a>
-      <a href="#" class="active">Niños</a>
-      <a href="#blog">Video Blog</a>
-      <a href="#Contacto">Contacto</a>
-      <a href="javascript:void(0);" class="icon" onclick="menuClick()">&#9776;</a>
-    </div>-->
     <header class="relHeader">
       <div class="headerWrapper pisotonB">
         <a href="pisoton.html"><img src="img/pisoton/PisotonHome-01.png"></a>
@@ -61,20 +48,12 @@
         </div>
       </div>
     </header>
-  <!--</section>-->
-  <!--<section id="videos" class="intern maxWidth">
-    <h4>Lo que somos</h4>
-    <article style="line-height:40px;font-size:30px;width:unset;">
-      Somos un equipo humano comprometido con la construcción del ser, que trabaja por la infancia y la adolescencia, facilitando el conocimiento del desarrollo psicoafectivo, la aceptación y la regulación de las emociones en niños, padres y maestros, para contribuir a la armonía, el bienestar y la transformación social.
-    </article>
-  </section>-->
-  <section id="info" class="intern maxWidth">
+  <section id="info" class="intern">
     <div id='emotionHeader'>
       <div class="title">
-        <img src='img/pisoton/NosEmociona-01.png'/>
+        <h2> Nos Emociona Transformar</h2>
       </div>
       <div class="imageDesc">
-        <img src='img/pisoton/NOSEMOCIONAEDUCAR.JPG'/>
       </div>
     </div>
     <article class="emotion-row leftAlign">
@@ -86,7 +65,7 @@
     </video>-->
   </section>
   <section id="dataEmotion" class="maxWidth">
-    <div id="dataEmotionHeader">
+    <div id="dataEmotionHeader" class="my-4">
       <a href="estructura.html"><div class="circleLink" id="structure"></div></a>
       <a href="programa.html"><div class="circleLink" id="program"></div></a>
       <a href="formacion.html"><div class="circleLink" id="formation"></div></a>
@@ -94,8 +73,8 @@
     </div>
     <article>
       <div class="mapWrapper">
-        <div>
-          <img src="img/pisoton/NosEmociona-06.png" alt="Corazones que hemos tocado">
+        <div class="hearts-reached my-2">
+          <h2> Corazones que hemos tocado</h2>
           <p>Es emocionante que educando con amor, hemos ayudado a transformar e impactar cientos de vida</p>
         </div>
         <img src="img/pisoton/NosEmociona-07.png">
