--- a/pisoton.html
+++ b/pisoton.html
@@ -56,7 +56,7 @@
       <p>Somos un equipo humano comprometido con la construcción del ser, que trabaja por la infancia y la adolescencia, facilitando el conocimiento del desarrollo psicoafectivo, la aceptación y la regulación de las emociones en niños, padres y maestros, para contribuir a la armonía, el bienestar y la transformación social.</p>
     </div>
     <div class="who-we-are d-flex justify-content-center flex-wrap flex-md-nowrap">
-        <a class="pr-5 mb-3" href="nos_emociona_educar.html"><img src="img/pisoton/elementos-08.png" alt="Nos emociona educar"></a>
+        <a class="pr-5 mb-3" href="nos_emociona_transformar.html"><img src="img/pisoton/elementos-08.png" alt="Nos emociona educar"></a>
         <a class="pl-5 mb-3" href="razones_y_corazones.html"><img src="img/pisoton/elementos-09.png" alt="Razones y corazones"></a>
     </div>
   </section>
