Finished reasons and hearts

--- a/nos_emociona_transformar.html
+++ b/nos_emociona_transformar.html
@@ -56,7 +56,7 @@
       <div class="imageDesc">
       </div>
     </div>
-    <article class="emotion-row leftAlign">
+    <article class="emotion-row leftAlign my-5">
       <p class="desc">Estamos comprometidos con la construcción del ser, trabajamos por la infancia y la adolescencia, facilitando el conocimiento del desarrollo psicoafectivo, la aceptación y la regulación de las emociones en niños, padres y maestros, para contribuir a la armonía, el bienestar y la transformación social.</p>
       <p class="quote1">Trabajamos por, con y para la infancia</p>
     </article>
