--- a/razones_y_corazones.html
+++ b/razones_y_corazones.html
@@ -16,12 +16,15 @@
     <title></title>
     <meta name="viewport" content="width=device-width, user-scalable=no" >
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap-4-utilities.min.css">
     <link rel="stylesheet" href="css/default.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/buttons.css">
+    <link rel="stylesheet" href="css/excited_to_transform.css">
+    <link rel="stylesheet" href="css/reasons_and_hearts.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900" rel="stylesheet">
 </head>
 <body>
-  <!--<div class="hidden" id="#tabSelect"></div>
-  <section id="banner" class="intern">-->
     <div class="topnav parent" id="myTopnav">
       <a href="pisoton.html" class="active">Pisotón</a>
       <a href="padres.php">Padres</a>
@@ -29,23 +32,6 @@
       <a href="index.php" >Niños</a>
       <a href="javascript:void(0);" class="icon" onclick="menuClickParent()">&#9776;</a>
     </div>
-    <!--<div class="subMenu">
-      <a id="refBanner" href="#" class="active">Inicio</a>
-      <a id="refBlog" href="#blog">Video Blog</a>
-      <a id="refContacts" href="#moreInfo">Contacto</a>
-    </div>-->
-    <!--<h1 id="logo">
-      <a href="#"></a>
-    </h1>
-    /*<div class="topnav" id="myTopnav">
-      <a href="#padres">Padres</a>
-      <a href="#maestros">Maestros</a>
-      <a href="#" class="active">Niños</a>
-      <a href="#blog">Video Blog</a>
-      <a href="#Contacto">Contacto</a>
-      <a href="javascript:void(0);" class="icon" onclick="menuClick()">&#9776;</a>
-    </div>-->
-  <!--</section>-->
   <header class="relHeader">
     <div class="headerWrapper pisotonB">
       <a href="pisoton.html"><img src="img/pisoton/PisotonHome-01.png"></a>
@@ -62,24 +48,17 @@
       </div>
     </div>
   </header>
-  <!--<section id="videos" class="intern maxWidth">
-    <h4>Para qué lo hacemos</h4>
-    <article style="line-height:40px;font-size:30px;">
-      La única tarea de los niños es crecer fuertes, sanos, seguros de sí mismos, con felicidad, amor y estimulación adecuada.
-    </article>
-  </section>-->
-  <section id="info" class="intern maxWidth">
+  <section id="info" class="intern">
     <div id='emotionHeader'>
-      <div class="imageDesc">
-        <img src='img/pisoton/FOTO_RAZONES.JPG'/>
+      <div class="imageDesc reasons_and_hearts">
       </div>
-      <div class="title">
-        <img src='img/pisoton/Movemos-01.png'/>
+      <div class="title p-1 p-md-5">
+          <h2> Movemos razones & corazones </h2>
       </div>
     </div>
-    <article class="emotion-row">
-      <p class="desc">La única tarea de los niños es crecer fuertes, sanos, seguros de sí mismos, con felicidad, amor y estimulación adecuada.</p>
-      <p class="quote1">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt."</p>
+    <article class="emotion-row my-md-5">
+      <p class="desc">"Jamás imaginamos que un personaje animal tomara alma o dejara huella en los niños y madres. Ellos expresaban que pisoton era amor, confianza, fé y esperanza; ese amigo con el cual platicar cuando se sientan tristes. Gracias Pisotón, por convertir estos sueños en luces esperanzadores." <br>  <strong> Benita Morales Barranco, Yucatán </strong> </p>
+      <p class="quote1 mb-3">La única tarea de los niños es crecer fuertes, sanos, seguros de sí mismos, con felicidad, amor y estimulación adecuada.</p>
     </article>
     <div class="textAndImg">
       <img src='img/pisoton/FOTO_MITAD_1.JPG'/>
@@ -87,55 +66,10 @@
         <p class="desc">Movemos las mentes y los corazones de los niños de Colombia y Latinoamérica, y también de papás, mamás, cuidadores y educadores para facilitarles la comprensión de las emociones propias del desarrollo humano, ya que este conocimiento les permite generar espacios de comunicación en los que se potencializa el adecuado desarrollo psicoafectivo de la niñez. Impactamos de manera inmediata el presente de los niños y niñas, pero también su vida futura y por tanto, el progreso de la sociedad donde se desenvuelven.</p>
       </article>
     </div>
-    <!--<article class="width800" style="text-align: left;">
-      <p class="desc">Colombia tiene una experiencia relativamente corta con respecto a la puesta en marcha
-        de los derechos de la infancia. Por muchas décadas, prevaleció la crianza bajo la lógica del
-        castigo físico y la coerción, lo cual respondía coherentemente con la concepción que se
-        tenía de los niños y las niñas: propiedad de sus cuidadores. Esta dinámica de relación
-        permitió que se instaurara lo traumático, que se avalaran las acciones maltratantes y que
-        se desconocieran los deseos y las necesidades de la población infantil.
-        Gran parte de la problemática actual hunde sus raíces en los vacíos emocionales, en las
-        carencias afectivas, en el sentimiento de falta que nunca ha sido saciado y en la ausencia
-        de reconocimiento por parte del otro. Por eso, nuestro principal reto como sociedad es
-        asumir nuestra corresponsabilidad en la educación de la infancia contemplando el
-        panorama holístico que supone el desarrollo y teniendo suprema claridad de que un niño
-        feliz es un adulto sano y que no hay nada mejor para la humanidad que encontrar el
-        equilibrio entre la razón y la emoción.
-        Basándonos en las investigaciones de Pisotón sobre la realidad infantil, reconociendo las
-        cifras del último estudio en salud mental realizado por el Ministerio de Salud en 2015,
-        contemplando la fuerte crisis en vulneración a los derechos de la población infantil
-        reflejados en el maltrato, las muertes, las violaciones, los abusos, etc., que diariamente
-        invaden nuestras noticias locales, nacionales e internacionales, es más que evidente la
-        relevancia que tiene seguir trabajando la dimensión emocional como componente
-        fundamental en el desarrollo infantil.
-        Pisotón pretende promover el bienestar de los niños, propiciar una adecuado desarrollo
-        psicoafectivo y combatir los efectos traumáticos de las situaciones que interfieren en su
-        ciclo vital. Esto se traduce en llegar a tiempo para prevenir o llegar lo más rápido posible
-
-        para intervenir cuando las cosas no se han dado favorablemente, de tal forma que se
-        pueda reparar el daño causado y se les enseñe a los niños, las familias y el entorno escolar
-        a reconocer, elaborar y resignificar las experiencias, para aprender a vivir lo mejor posible,
-        a pesar de cualquier circunstancia.</p>
-    </article>-->
     <div class="quotesWrapperBg">
-      <article>
-        <p class="desc">Promovemos el bienestar de los niños</p>
-      </article>
-      <article>
-        <p class="desc">Propiciamos su adecuado desarrollo psicoafectivo</p>
-      </article>
-      <article>
-        <p class="desc">Combatimos los efectos de las situaciones traumáticas</p>
-      </article>
-      <article>
-        <p class="desc">Llegamos a tiempo para prevenir e intervenir</p>
-      </article>
-      <article>
-        <p class="desc">Reconocemos al a la familia y al maestro como figuras claves en el desarrollo del niño.</p>
-      </article>
     </div>
-    <div class="textAndImg leftAlign">
-      <img src='img/pisoton/Movemos-02.png'/>
+    <div class="textAndImg what-we-believe d-flex justify-content-center py-3 py-md-5">
+      <h2 class="mr-md-5"> En qué creemos</h2>
       <article>
         <p class="desc"><p class="desc">
           Creemos en la construcción del ser como un proceso integral donde lo psicoafectivo: el
@@ -152,54 +86,14 @@
         </p></p>
       </article>
     </div>
-    <!--<article class="emotion-row reason-row">
-      <ul id="reasons" class="desc">
-        <li>Un vínculo afectivo adecuado es aquella relación que se alimenta de expresiones
-        afectivas como miradas tiernas, abrazos protectores, sonrisas cálidas, alimentación
-        con entrega, y si esas manifestaciones se dan desde los primeros días, llenarán de
-        confianza y seguridad a los niños, logrando fortalecer sus habilidades sociales para
-        relacionarse con los otros.</li>
-        <li>Los niños pueden experimentar miedos, temores y ansiedad al momento de
-        separarse de sus padres, por ejemplo cuando los dejan en el colegio, viajan o salen
-        a trabajar. Es importante que los padres comprendan que los niños temen
-        quedarse solos y que es clave la constancia con la que les demuestran que ellos
-        siguen siendo objeto de su amor.</li>
-        <li>Límites claros con amor y sin temor. La educación con amor supone el
-        establecimiento sano de límites para que los niños aprendan a ser autónomos y
-        sean capaces de adaptarse a las normas sociales, lo que puede llevarlos a sentir
-        frustración y rabia al entrar en conflicto con sus deseos, así como también un
-        sentimiento ambivalente frente a sus figuras de amor.</li>
-        <li>Cuando el niño entra a interactuar con otros niños se da cuenta de que el mundo
-        no le pertenece y siente una necesidad de control y defensa. Es importante que los
-        niños aprendan a compartir y respetar los deseos del otro sin desconocer sus
-        necesidades.</li>
-        <li>El impulso por conocer el mundo que los rodea hace que los niños desarrollen su
-        iniciativa para explorarlo, los temores que puedan sentir frente a la realización de
-        actividades nuevas, los límites de la auto-determinación que esto trae consigo y la
-        identificación de las diferencias sexuales ayudan a consolidar su identidad.</li>
-        <li>Algunas experiencias durante el crecimiento de los niños les pueden ocasionar
-        ciertos sentimientos de culpa, miedo y celos. Es importante que a través de la
-        expresión de sus emociones, reconozcan sus temores, como por ejemplo a la
-        oscuridad, monstruos y fantasmas, así como también, la fantasía que trae consigo
-        la rivalidad fraterna cuando llega un nuevo hermano.</li>
-        <li>Los niños pueden experimentar situaciones donde la toma de decisiones está
-        directamente relacionada con el reconocimiento de los límites y su desarrollo
-        moral, reconocer su sentido de existir partiendo de la existencia del otro, les
-        permite adaptarse de mejor manera a la realidad.</li>
-        <li>Me conozco, me quiero, te reconozco y admiro. Un individuo se forma según el
-        respeto y el amor por sí mismo, pero también según el reconocimiento y la
-        admiración por el otro. Es importante generar espacios para que los niños se
-        conozcan, respeten, potencialicen y preocupen por sí mismos y por el otro,
-        creando una buena auto estima y una admiración en la diferencia.</li>
-      </ul>
-      <p class="quote1">8 razones para aprender sobre el desarrollo psicoafectivo</p>
-    </article>-->
   </section>
   <section id="anarita">
-    <div class="generalWrapper">
+    <div class="">
       <div id="articles">
         <article>
-          <p class="articleTitle quote1">8 razones para aprender sobre el desarrollo psicoafectivo</p>
+          <h2>8 razones</h2>
+          <p class="articleTitle quote1">
+             para aprender sobre el desarrollo psicoafectivo</p>
         </article>
         <div class="opt_content_slider_wrapper">
           <div class="opt_content_reasons active">
