Starting changes for Teachers page

--- a/maestros.html
+++ b/maestros.html
@@ -16,7 +16,10 @@
     <title></title>
     <meta name="viewport" content="width=device-width, user-scalable=no" >
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap-4-utilities.min.css">
     <link rel="stylesheet" href="css/default.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/parents.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900" rel="stylesheet">
 </head>
 <body>
@@ -38,25 +41,6 @@
     </header>
     <iframe  type="text/html" allowfullscreen style="width:100%;height:100%;display:none" src="" frameborder="0"></iframe>
     <div class="bannerImg"></div>
-    <!--<div class="subMenu">
-      <a id="refBanner" href="#" class="active">Inicio</a>
-      <a id="refBlog" href="#blog">Video Blog</a>
-      <a id="refArticles" href="#articles" >Artículos</a>
-      <a id="refDownloader" href="#downloader">Descargables</a>
-      <a id="refFormPis" href="#formPis">Escríbenos</a>
-      <a id="refContacts" href="#moreInfo">Contacto</a>
-    </div>-->
-    <!--<h1 id="logo">
-      <a href="#"></a>
-    </h1>
-    /*<div class="topnav" id="myTopnav">
-      <a href="#padres">Padres</a>
-      <a href="#maestros">Maestros</a>
-      <a href="#" class="active">Niños</a>
-      <a href="#blog">Video Blog</a>
-      <a href="#Contacto">Contacto</a>
-      <a href="javascript:void(0);" class="icon" onclick="menuClick()">&#9776;</a>
-    </div>-->
     <div class="hidden" id="#tabSelect"></div>
     <div class="generalWrapper">
       <article>
@@ -68,10 +52,6 @@
     <div id="overlay_back"></div>
   </section>
   <section id="anarita">
-  <!--  <div class="sectionHeader">
-      <h3>¿Quieres que Ugo pisotón visite tu escuela?</h3>
-      <a href="#formPis" class="btn">Contáctanos</a>
-    </div>-->
     <div class="generalWrapper">
       <div id="blog">
         <article>
