--- a/razones_y_corazones.html
+++ b/razones_y_corazones.html
@@ -57,7 +57,7 @@
       </div>
     </div>
     <article class="emotion-row my-md-5">
-      <p class="desc">"Jamás imaginamos que un personaje animal tomara alma o dejara huella en los niños y madres. Ellos expresaban que pisoton era amor, confianza, fé y esperanza; ese amigo con el cual platicar cuando se sientan tristes. Gracias Pisotón, por convertir estos sueños en luces esperanzadores." <br>  <strong> Benita Morales Barranco, Yucatán </strong> </p>
+      <p class="desc mr-lg-5">"Jamás imaginamos que un personaje animal tomara alma o dejara huella en los niños y madres. Ellos expresaban que pisoton era amor, confianza, fé y esperanza; ese amigo con el cual platicar cuando se sientan tristes. Gracias Pisotón, por convertir estos sueños en luces esperanzadores." <br>  <strong> Benita Morales Barranco, Yucatán </strong> </p>
       <p class="quote1 mb-3">La única tarea de los niños es crecer fuertes, sanos, seguros de sí mismos, con felicidad, amor y estimulación adecuada.</p>
     </article>
     <div class="textAndImg">
